# Angar.ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  README.md  pyproject.toml
angar_extraction/: errors.py  extractor.py
angar_extraction/prompts/: README.md  v0.md  v1.md  v2.md  v3.md
angar_schema/: canonical.py
backend/: README.md  api_schemas.py  auth.py  confidence.py  db.py  email.py  export_formats.py  extraction_service.py  main.py  models.py  quota.py  rate_limit.py  settings.py  storage.py  stripe_service.py
backend/email_templates/: receipt.en.html  reset.en.html  verify.en.html
backend/routes/: auth.py  billing.py  extraction.py
backend/tests/: conftest.py  test_auth.py  test_confidence.py  test_email_flows.py  test_export_approve.py  test_extraction_errors.py  test_extraction_service.py  test_quota.py  test_rate_limit.py  test_routes.py  test_smoke_e2e.py  test_storage.py  test_stripe_webhooks.py
eval/: README.md  canonical_path.py  comparator.py  extractor.py  fixtures.py  harness.py  prompt.py  pyproject.toml  report.py
eval/prompts/: v0.md
eval/tests/: test_comparator.py  test_extractor.py  test_fixtures.py  test_harness.py  test_prompt.py  test_report.py
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/auth/: auth-card.tsx  google-button.tsx  login-form.tsx  signup-form.tsx
frontend/src/components/billing/: billing-plans.tsx
frontend/src/components/dashboard/: archive-filters.tsx  document-row.tsx  documents-table.tsx  pagination.tsx
frontend/src/components/landing/: landing-hero.tsx  landing-nav.tsx  landing.module.css  live-extraction-stage.tsx
frontend/src/components/review/: acceptance-banner.tsx  action-bar.tsx  confidence-row.tsx  data-pane.tsx  document-strip.tsx  extraction-error-card.tsx  extraction-pane.tsx  extraction-summary.tsx  field-row.tsx  field-state-ui.tsx  file-bar.tsx  flags-block.tsx  line-items-table.tsx  money-cell.tsx  notes-panel.tsx  party-block.tsx  pdf-fullscreen.tsx  pdf-pane.tsx  pdf-viewer.tsx  reextract-button.tsx  review-action-bar.tsx  review-body.tsx  review-edit-context.tsx  review-header.tsx  review-workspace.tsx  risk-strip.tsx  section-block.tsx  section-header.tsx  section.tsx  totals-block.tsx
frontend/src/components/review-queue/: queue-row.tsx
frontend/src/components/settings/: profile-form.tsx
frontend/src/components/shell/: nav-item.tsx  sidebar.tsx  topbar.tsx  usage-card.tsx  verification-banner.tsx
frontend/src/components/ui/: button.tsx  chip.tsx  (+1 more)
frontend/src/hooks/: use-document-file.ts  use-extraction.ts  use-upload.ts
frontend/src/lib/: api-server.ts  api-types.ts  api.ts  auth.ts  canonical.ts  confidence.ts  extraction-errors.ts  utils.ts
project foundation/: adapters.py  angar-ai-extraction-agent-spec.md  angar-ai-phase2-v1.0.md  angar-ai-phase3-v1.0.md  angar-ai-project-charter-v1.3.md  angar-ai-project-context.md  rsge_quirks.md
project foundation/labels/: Waybill_List.md  Waybill_List1.md  Waybill_List10.md  Waybill_List2.md  Waybill_List3.md  Waybill_List4.md  Waybill_List5.md  Waybill_List6.md  Waybill_List7.md  Waybill_List8.md  Waybill_List9.md  invoice_001.md  invoice_002.md  invoice_003.md  invoice_004.md  invoice_005.md  invoice_006.md  invoice_007.md
scripts/: eval_gate.py
(+19 files in other folders)
