[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angar"
version = "0.1.0"
description = "Angar.ai — Georgian-invoice extraction. Includes the eval harness, the shared canonical schema, the shared extractor (Claude vision), and the FastAPI backend pipeline."
requires-python = ">=3.11"
readme = "eval/README.md"
authors = [{ name = "Giorgi Gakharia", email = "giorgigakharia@gmail.com" }]
license = { text = "Proprietary" }

dependencies = [
    "anthropic>=0.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.6",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "email-validator>=2.0",
    "slowapi>=0.1.9",
    "resend>=0.7",
    "stripe>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pre-commit>=3.5",
]

[project.scripts]
angar-eval = "eval.harness:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["angar_schema*", "angar_extraction*", "eval*", "backend*"]
exclude = ["eval.tests*", "eval.runs*", "backend.tests*", "backend.local*"]

[tool.pytest.ini_options]
testpaths = ["eval/tests", "backend/tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
